examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__yield_expressions@yield_1.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Yield(
                            Yield {
                                children: Some(
                                    Expression(
                                        PrimaryExpression(
                                            Integer(
                                                Integer {
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
